# how-to-set-up-a-cpp-repo-using-a-cmake-structure

./: .clang-format  CMakeLists.txt  LICENSE  README.md
MyHeaderOnlyLib/: CMakeLists.txt
MyHeaderOnlyLib/include/: CMakeLists.txt
