cmake_minimum_required( VERSION 3.1.3 )

set( PROJECT_NAME MyHeaderOnlyLib )
set( PROJECT_VERSION_MAJOR 1 )
set( PROJECT_VERSION_MINOR 0 )
set( PROJECT_VERSION_PATCH 0 )
set( PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH} )

project( ${PROJECT_NAME} VERSION ${PROJECT_VERSION} LANGUAGES CXX )

add_library( ${PROJECT_NAME} INTERFACE )

add_subdirectory( include )